# calculator

./: Cargo.toml  myscript.toy
src/: ast.rs  exec.rs  grammar.lalrpop  lexer.rs  main.rs  reporting.rs  snapshot_tests.rs  tokens.rs
src/reporting/: format.rs
src/snapshot_tests/lexer/: comment_without_newline.toy  negative_number.toy
src/snapshot_tests/parser/: basic.toy  number_very_big.toy
src/snapshot_tests/reporting/: multiple_errors.toy  too_big_integer.toy
src/snapshots/: calculator__snapshot_tests__lexer_tests@basic.toy.snap  calculator__snapshot_tests__lexer_tests@comment_without_newline.toy.snap  calculator__snapshot_tests__lexer_tests@negative_number.toy.snap  calculator__snapshot_tests__lexer_tests@number_very_big.toy.snap  calculator__snapshot_tests__lexer_tests@zero.toy.snap  calculator__snapshot_tests__parser_tests@basic.toy.snap  calculator__snapshot_tests__parser_tests@number_very_big.toy.snap  calculator__snapshot_tests__reporting_tests@invalid_eof.toy.snap  calculator__snapshot_tests__reporting_tests@multiple_errors.toy.snap  calculator__snapshot_tests__reporting_tests@too_big_integer.toy.snap
